# Synk-Vulkan

./: CMakeLists.txt
includes/core/: CoreComponents.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  Surface.h  SwapChain.h  Window.h
includes/core/maths/: maths.h
includes/core/rendering/: CommandBuffers.h  CommandPool.h  DescriptorPool.h  Framebuffer.h  Mesh.h  Pipeline.h  RenderPass.h  Scene.h  Shader.h  Submit.h  WindowResizeManager.h
includes/core/rendering/buffers/: Buffer.h  UniformBuffer.h
includes/core/utils/: File.h  Noise.h  Queue.h
includes/core/utils/logs/: Logger.h
src/client/: main.cpp
src/core/: CoreComponents.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Surface.cpp  SwapChain.cpp  Window.cpp
src/core/maths/: mat4.cpp  quat.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/core/rendering/: CommandBuffers.cpp  CommandPool.cpp  DescriptorPool.cpp  Framebuffer.cpp  Mesh.cpp  Pipeline.cpp  RenderPass.cpp  Scene.cpp  Shader.cpp  Submit.cpp  WindowResizeManager.cpp
src/core/rendering/buffers/: Buffer.cpp
src/core/utils/: File.cpp  Noise.cpp
src/core/utils/logs/: Logger.cpp
